# TheHunter

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  fix-workspace-permissions.sh  pyproject.toml
.github/workflows/: claude.yml
docs/: CLOUDFLARE_GLM.md  RECONX.md
pentestgpt/: __init__.py
pentestgpt/core/: backend.py  budget.py  cf_backend.py  config.py  controller.py  pipeline.py  pipelines.py
pentestgpt/interface/: main.py
pentestgpt/prompts/: stages.py
pentestgpt_legacy/: __init__.py  _version.py  config.py  main.py  smoke_test.py  test_connection.py
pentestgpt_legacy/llm/: __init__.py  base.py  client.py  config.py  factory.py  registry.py
pentestgpt_legacy/llm/providers/: __init__.py  anthropic_provider.py  gemini_provider.py  openai_compatible.py
pentestgpt_legacy/prompts/: prompt_class.py
pentestgpt_legacy/utils/: pentest_gpt.py  prompt_select.py  report_generator.py  task_handler.py
recon/: reconx
scripts/: entrypoint.sh  install-recon-tools.sh  pentestgpt-setup.sh
tests/docker/: test_container_health.py
tests/legacy/: test_client.py  test_config.py  test_factory.py  test_registry.py
tests/unit/: test_budget.py  test_cf_backend.py  test_config.py  test_flag_detection.py  test_pipeline.py  test_pipelines_factory.py  test_reconx.py  test_stage_prompts.py
workspace/: bb
workspace/bb-triage/: README.md  bb_triage.py  instruction.sh  run_triage.sh  scope_check.py  summary.py  verify_findings.py
